force-app/main/default/objects/Detalle_Oportunidad__c/Detalle_Oportunidad__c.object-meta.xml
<CustomObject>
    <label>Detalle Oportunidad</label>
    <nameField>
        <label>Nombre de Detalle Oportunidad</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Detalles Oportunidades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>