force-app/main/default/objects/Detalle_Oportunidad__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <description>Campo de relación con oportunidad</description>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Detalles Oportunidades</relationshipLabel>
    <relationshipName>Detalles_Oportunidades</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>