force-app/main/default/objects/Detalle_Oportunidad__c/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Saldo</label>
    <referenceTo>Saldo__c</referenceTo>
    <relationshipLabel>Detalles Oportunidades</relationshipLabel>
    <relationshipName>Detalles_Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>