force-app/main/default/objects/Detalle_Oportunidad__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo Saldo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monto</fullName>
                <default>true</default>
                <label>Monto</label>
            </value>
            <value>
                <fullName>Porcentaje</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>