force-app/main/default/objects/Detalle_Oportunidad__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <description>Valor del saldo del compromiso</description>
    <inlineHelpText>Valor del saldo del compromiso</inlineHelpText>
    <label>Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>